# ward

./: .gitignore  .ward  CONTRIBUTING.md  Dockerfile  LICENSE  QUICK_START.md  README.md  configure-claude-desktop.sh  install.sh  pyproject.toml  setup-ward.sh  ward-mcp-server-wrapper.py  ward-now
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml  release.yml
.specify/scripts/bash/: create-new-feature.sh
.specify/templates/: spec-template.md
.ward/: .ward  README.md  auto-ward.ps1  auto-ward.sh  guard.sh  ward-auth.sh  ward-cli.sh  ward-completion.bash  ward.conf  ward.sh
.ward/core/: config.sh  engine.sh  logging.sh  plugin_manager.sh
specs/1-shell-choosing/: spec.md
specs/1-shell-choosing/checklists/: requirements.md
src/ward_security/: __init__.py  ai_assistant.py  cli.py  deployer.py  favorites.py  file_monitor.py  indexer.py  installer.py  mcp_installer.py  mcp_server.py  shell.py  shell_detector.py  shell_selector.py  ward_config.py
